# cloud_storage

./: Dockerfile  main.py  pyproject.toml  requirements.txt
